[tool.poetry]
name = "vaner"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.42.4"
datasets = "^2.20.0"
evaluate = "^0.4.2"
peft = "^0.11.1"
seqeval = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
