[tool.poetry]
name = "vaner"
version = "1.0.0"
description = ""
authors = []
packages = [{include = "vaner"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = {extras = ["sentencepiece"], version = "^4.43.2"}
datasets = "^2.20.0"
evaluate = "^0.4.2"
peft = "^0.11.1"
seqeval = "^1.2.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
